2010-12-23  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #16825: Fatal error in lang.php (thanks to Georg Ringer)

2010-12-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16760: RTE transformation removes all span tags on save after upgrade TYPO3 4.3.9

2010-12-20  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #16134: TYPO3 doesn't always fix permissions for new files

2010-12-17  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #5186: fixed rendering of multi-column image rows (thanks to Michael Bürgi)

2010-12-17  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #14500: Bug: Unit test failures in t3lib_matchCondition_backend_testcase (Thanks to Oliver Klee)

2010-12-17  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #16470: Scheduler fails to calculateNextValue a turn of the year (thanks to Tobias Hövelborn and Christian Kuhn)

2010-12-16  Oliver Hader  <oliver.hader@typo3.org>

	* Release of TYPO3 4.3.9

2010-12-16  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #14402: XSS in Install tool (thanks to Benjamin Mack)
	* Fixed bug #16590: t3lib_TSparser::checkIncludeLines() does not check files to be included (thanks to Fabrizio Branca)
	* Fixed bug #15737: quoteStrForLike does not properly escape strings in sql_mode NO_BACKSLASH_ESCAPES
	* Fixed bug #16653: SQL injection problem in class.db_list.inc (thanks to Jigal van Hemert)
	* Fixed bug #15735: FORM content object is susceptible to XSS (thanks to Benjamin Mack)
	* Fixed bug #16362: Directory traversal attack in em_unzip
	* Fixed bug #16485: Cross-Site Scripting in showpic functionality
	* Fixed bug #16593: It is possible to bypass 'verifyFilenameAgainstDenyPattern'
	* Follow-up to bug #16593: Added unit tests

2010-12-01  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #16604: Changes in workspace are not shown automatically in pagetree
	* Fixed bug #15495: Pagetree fails to reload

2010-11-30  Xavier Perseguers  <typo3@perseguers.ch>
