@@ -1,3 +1,7 @@
+2010-12-28  Benjamin Mack  <benni@typo3.org>
+
+	* Revert change #16614 (rev. 968333 common.js resets TYPO3 namespace / Fixed regression #16831: 'Ext' is undefinded, Line: 81, js/common.js 
+
 2010-12-23  Jigal van Hemert <jigal@xs4all.nl>
 
 	* Fixed bug #16825: Fatal error in lang.php (thanks to Georg Ringer)
